--- a/run_12_vernier_analysis_note/intro.tex
+++ b/run_12_vernier_analysis_note/intro.tex
@@ -81,8 +81,37 @@ as a systematic check - beam scan order is varied, beam energy is varied, scan
 length and step length is varied, and scanning patterns are varied. We expect
 that these variations will not affect our final result.
 
-\input{./tables/global_scan_summary.tex}
-\input{./figures/scan_patterns.tex}
+\begin{sidewaystable}[ht]
+\centering
+\begin{tabular}{ccccccccc}
+\toprule
+\textbf{Run}    & \textbf{Fill}   & \textbf{Energy}          & \textbf{Scan}       & \textbf{Scan}    & \textbf{Scan}  & \textbf{Beam}    &                & \textbf{Step}     \\
+\textbf{Number} & \textbf{Number} & \textbf{($GeV\sqrt{s}$)} & \textbf{Time (min)} & \textbf{Pattern} & \textbf{Order} & \textbf{Scanned} & \textbf{Steps} & \textbf{Time (s)} \\
+\midrule
+359711 & 16444 & 200 & 41 & Type 1 & H - V & Blue  & 26 & 57.5 \\
+360879 & 16470 & 200 & 41 & Type 1 & H - V & Yellow& 26 & 61.2 \\
+362492 & 16514 & 200 & 50 & Type 1 & V - H & Blue  & 26 & 62.3 \\
+364636 & 16587 & 510 & 58 & Type 2 & H - V & Yellow& 18 & 21.7 \\
+365866 & 16625 & 510 & 53 & Type 1 & H - V & Blue  & 26 & 70.0 \\
+366605 & 16655 & 510 & 54 & Type 1 & H - V & Yellow& 26 & 67.7 \\
+367138 & 16671 & 510 & 54 & Type 1 & H - V & Blue  & 26 & 68.65\\
+\bottomrule
+\end{tabular}
+\caption{ A summary of vernier scans in run 12 }
+\label{tab:global_scan_summary}
+\end{sidewaystable}
+
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width=0.75\linewidth]{./figures/scan_patterns}
+\caption{ Two different scanning patterns were used in Run 12. Type 2 was previously
+used in past years prior to 2012, and is included in this year's set of scans as a consistency check.
+Type 1 was used for the majority of the scans in 2012. The scan order introduces
+systematic effects based on rate losses in the beam width calculation, which are described
+later.}
+\label{fig:scan_patterns}
+\end{center}
+\end{figure}
 
 \setcounter{page}{1}
 
